add logo con fondo transparente

--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
         <div class="backdrop-blur-xl bg-white/70 border-b border-white/20 shadow-sm">
             <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
 
-                <!-- Logo -->
-                <h1 class="text-2xl font-extrabold tracking-tight text-gray-900">Automarketpro</h1>
+                <a href="/" class="flex items-center gap-3">
+                    <img 
+                    src="assets/img/logo-transparente.png"
+                        alt="Automarketpro"
+                        class="h-8 w-auto"
+                    />
+                    <span class="text-2xl font-extrabold tracking-tight text-gray-900">
+                        Automarketpro
+                    </span>
+                </a>
 
                 <!-- NAV Desktop -->
                 <nav class="hidden md:flex items-center space-x-8 text-lg font-medium">
