fix footer legal

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <div id="tc" class="max-w-4xl mx-auto px-6 mt-10 text-center text-sm opacity-70 leading-relaxed">
             <p><strong>Automarketpro - Tu próximo auto, con la tranquilidad que merecés</strong></p>
             <p class="mt-2">
-                El peritaje de vehículos es realizado por usuarios independientes y no constituye una revisión técnica
+                El peritaje de vehículos es realizado por verificadores independientes y no constituye una revisión técnica
                 oficial,
                 ni está avalado por fabricantes, concesionarias u organismos estatales.
                 El uso de los servicios ofrecidos es bajo exclusiva responsabilidad del usuario.
