--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>Automarketpro - Tu próximo auto, con la tranquilidad que merecés.</title>
     <!-- SEO Principal -->
     <meta name="description"
-    content="Automarketpro es la plataforma profesional para verificadores y dueños de autos. Reportes premium, historial, mantenimiento y gestión inteligente." />
+    content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
     <meta name="keywords"
-        content="verificación vehicular, informes de autos, mantenimiento de autos, historial automotor, SaaS autos, ghia app" />
+        content="verificación vehicular, informes de autos, historial automotor, SaaS autos, ghia app" />
         <meta name="author" content="Automarketpro" />
         
     <!-- OpenGraph (Facebook / WhatsApp / LinkedIn) -->
-    <meta property="og:title" content="Automarketpro - Entras gratis. Verificas seguro. Gestionas fácil." />
+    <meta property="og:title" content="Automarketpro - Verificas fácil. Compras seguro." />
     <meta property="og:description"
-        content="Reportes premium, historial, checklist, fotos y gestión completa para verificadores y propietarios." />
+        content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
     <meta property="og:image" content="assets/favicon.ico" />
     <meta property="og:url" content="https://www.automarketpro.com.ar" />
     <meta property="og:type" content="website" />
