nuevo diseño informes

--- a/index.html
+++ b/index.html
@@ -172,33 +172,63 @@
         </div>
     </section>
 
-    <!-- REPORTS MOCKUP -->
+    <!-- REPORTS -->
     <section id="reports" class="fade-in py-20">
         <div class="max-w-6xl mx-auto px-6">
-            <h3 class="text-3xl md:text-4xl font-bold text-gray-900 text-center mb-10">Informe de verificación</h3>
 
-            <div class="flex flex-col md:flex-row gap-10 items-start justify-center">
+            <h3 class="text-3xl md:text-4xl font-bold text-gray-900 text-center mb-16">
+                Informe de verificación pre-compra
+            </h3>
 
-                <!-- CARD 1 -->
-                <div class="w-full md:w-1/2 report-card report-img-1 relative overflow-hidden">
-                    <div class="report-label p-5">
-                        <h4 class="text-xl font-bold">Reporte de verificación</h4>
-                         <p class="text-white-700 mt-2">
-                            Fácil de leer y compartir. Formato profesional listo para entregar al cliente.
-                        </p>
-                    </div>
+            <!-- ROW 1 -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center mb-20">
+
+                <!-- TEXT -->
+                <div>
+                    <h4 class="text-2xl font-bold text-gray-900 mb-4">
+                        Informe claro y profesional
+                    </h4>
+                    <p class="text-gray-700 text-lg leading-relaxed">
+                        Recibís un informe técnico detallado sobre el estado real del vehículo,
+                        con observaciones claras y lenguaje comprensible para tomar una decisión
+                        segura antes de comprar.
+                    </p>
                 </div>
 
-                <!-- CARD 2 -->
-                <div class="w-full md:w-1/2 report-card report-img-2 relative overflow-hidden">
-                    <div class="report-label p-5">
-                        <h4 class="text-xl font-bold">Reporte de servicio</h4>
-                          <p class="text-white-700 mt-2">
-                            Todo en un solo lugar y transferible.
-                        </p>
-                    </div>
+                <!-- IMAGE -->
+                <div>
+                    <img 
+                        src="assets/img/demo-01.jpg"
+                        alt="Informe de verificación pre-compra Automarketpro"
+                        class="w-full rounded-xl"
+                    />
                 </div>
             </div>
+
+            <!-- ROW 2 -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+
+                <!-- IMAGE -->
+                <div class="order-2 md:order-1">
+                    <img 
+                        src="assets/img/demo-02.jpg"
+                        alt="Resultado de inspección vehicular"
+                        class="w-full rounded-xl"
+                    />
+                </div>
+
+                <!-- TEXT -->
+                <div class="order-1 md:order-2">
+                    <h4 class="text-2xl font-bold text-gray-900 mb-4">
+                        Resultado de la inspección
+                    </h4>
+                    <p class="text-gray-700 text-lg leading-relaxed">
+                        Un resumen visual y técnico que te permite entender rápidamente
+                        si el vehículo conviene o no, evitando sorpresas y gastos futuros.
+                    </p>
+                </div>
+            </div>
+
         </div>
     </section>
 
