nuevos mockups report

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </p>
                 <div class="flex justify-center gap-4">
                     <a class="btn-primary" href="#cta">Contratar servicio</a>
-                    <a class="btn-secondary" href="#features">Cómo funciona</a>
+                    <a class="btn-secondary" href="#reports">Cómo funciona</a>
                 </div>
             </div>
         </div>
@@ -177,56 +177,86 @@
         <div class="max-w-6xl mx-auto px-6">
 
             <h3 class="text-3xl md:text-4xl font-bold text-gray-900 text-center mb-16">
-                Informe de verificación pre-compra
+                Paso a paso, como funciona nuestro servicio
             </h3>
 
-            <!-- ROW 1 -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center mb-20">
+            <!-- ROW -->
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-12 items-center mb-20">
 
-                <!-- TEXT -->
+                <!-- TEXT 1 -->
                 <div>
+                    <h4 class="text-xl font-bold text-gray-900 mb-3">
+                        Solicitud de verificación pre-compra
+                    </h4>
+                    <p class="text-gray-700 leading-relaxed">
+                        Nos pasás el enlace del auto que querés verificar y el detalle de
+                        dónde se encuentra ubicado.
+                    </p>
+                </div>
+
+                <!-- IMAGE 1 -->
+                <div>
+                    <img 
+                        src="assets/img/demo-01.png"
+                        alt="Solicitud de verificación Automarketpro"
+                        class="w-full rounded-xl"
+                    />
+                </div>
+
+                <!-- TEXT 2 -->
+                <div>
+                    <h4 class="text-xl font-bold text-gray-900 mb-3">
+                        Pagás la inspección y agendamos
+                    </h4>
+                    <p class="text-gray-700 leading-relaxed">
+                        Una vez recibido el pago, coordinamos día y horario para realizar
+                        la inspección del vehículo en el lugar acordado.
+                    </p>
+                </div>
+
+                <!-- IMAGE 2 -->
+                <div>
+                    <img 
+                        src="assets/img/demo-02.png"
+                        alt="Inspección vehicular Automarketpro"
+                        class="w-full rounded-xl"
+                    />
+                </div>
+
+            </div>
+
+            <!-- ROW 3 -->
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-12 items-center mb-20">
+
+                <!-- IMAGE LEFT -->
+                <div>
+                    <img 
+                        src="assets/img/demo-03.png"
+                        alt="Ejemplo de informe de verificación Automarketpro"
+                        class="w-full rounded-xl"
+                    />
+                </div>
+
+                <!-- TEXT CENTER -->
+                <div class="text-center md:text-left">
                     <h4 class="text-2xl font-bold text-gray-900 mb-4">
                         Informe claro y profesional
                     </h4>
                     <p class="text-gray-700 text-lg leading-relaxed">
                         Recibís un informe técnico detallado sobre el estado real del vehículo,
-                        con observaciones claras y lenguaje comprensible para tomar una decisión
-                        segura antes de comprar.
+                        con observaciones claras para tomar una decisión segura antes de comprar.
                     </p>
                 </div>
 
-                <!-- IMAGE -->
+                <!-- IMAGE RIGHT -->
                 <div>
                     <img 
-                        src="assets/img/demo-01.jpg"
-                        alt="Informe de verificación pre-compra Automarketpro"
-                        class="w-full rounded-xl"
-                    />
-                </div>
-            </div>
-
-            <!-- ROW 2 -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-
-                <!-- IMAGE -->
-                <div class="order-2 md:order-1">
-                    <img 
-                        src="assets/img/demo-02.jpg"
-                        alt="Resultado de inspección vehicular"
+                        src="assets/img/demo-04.png"
+                        alt="Detalle del reporte de inspección vehicular"
                         class="w-full rounded-xl"
                     />
                 </div>
 
-                <!-- TEXT -->
-                <div class="order-1 md:order-2">
-                    <h4 class="text-2xl font-bold text-gray-900 mb-4">
-                        Resultado de la inspección
-                    </h4>
-                    <p class="text-gray-700 text-lg leading-relaxed">
-                        Un resumen visual y técnico que te permite entender rápidamente
-                        si el vehículo conviene o no, evitando sorpresas y gastos futuros.
-                    </p>
-                </div>
             </div>
 
         </div>
