--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     <section class="hero-bg parallax-bg fade-in pt-32 pb-32">
         <div class="max-w-6xl mx-auto px-6 text-center">
             <div class="glass-card mx-auto max-w-4xl text-gray-900 shadow-lg shine-effect p-10">
-                <h2 class="text-3xl md:text-5xl font-extrabold mb-4">
-                    Tu próximo auto,<br> con la tranquilidad que merecés.
+                <h2 class="text-3xl md:text-5xl text-white font-extrabold mb-4">
+                    Compra seguro. <br> Compra verificado. 
                 </h2>
 
-                <p class="text-lg md:text-xl font-medium opacity-90 mb-6">
-                    Verificación pre-compra con informe técnico profesional antes de cerrar la operación.
+                <p class="text-lg md:text-xl font-medium text-white opacity-90 mb-6">
+                    Tu próximo auto, con la tranquilidad que merecés.
                 </p>
                 <div class="flex justify-center gap-4">
                     <a class="btn-primary" href="#cta">Contratar servicio</a>
