--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </section>
 
     <!-- REPORTS -->
-    <section id="reports" class="fade-in py-20">
+    <section id="reports" class="py-20">
         <div class="max-w-6xl mx-auto px-6">
 
             <h3 class="text-3xl md:text-4xl font-bold text-gray-900 text-center mb-16">
@@ -195,7 +195,7 @@
                 </div>
 
                 <!-- IMAGE 1 -->
-                <div>
+                <div class="fade-in">
                     <img 
                         src="assets/img/demo-01.png"
                         alt="Solicitud de verificación Automarketpro"
@@ -204,7 +204,7 @@
                 </div>
 
                 <!-- TEXT 2 -->
-                <div>
+                <div class="fade-in">
                     <h4 class="text-xl font-bold text-gray-900 mb-3">
                         Pagás la inspección y agendamos
                     </h4>
@@ -215,7 +215,7 @@
                 </div>
 
                 <!-- IMAGE 2 -->
-                <div>
+                <div class="fade-in">
                     <img 
                         src="assets/img/demo-02.png"
                         alt="Inspección vehicular Automarketpro"
@@ -229,7 +229,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12 items-center mb-20">
 
                 <!-- IMAGE LEFT -->
-                <div>
+                <div class="fade-in">
                     <img 
                         src="assets/img/demo-03.png"
                         alt="Ejemplo de informe de verificación Automarketpro"
@@ -238,7 +238,7 @@
                 </div>
 
                 <!-- TEXT CENTER -->
-                <div class="text-center md:text-left">
+                <div class="text-center md:text-left fade-in">
                     <h4 class="text-2xl font-bold text-gray-900 mb-4">
                         Informe claro y profesional
                     </h4>
@@ -249,7 +249,7 @@
                 </div>
 
                 <!-- IMAGE RIGHT -->
-                <div>
+                <div class="fade-in">
                     <img 
                         src="assets/img/demo-04.png"
                         alt="Detalle del reporte de inspección vehicular"
