--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="card-anim glass-card reveal p-6">
                     <h4 class="text-2xl font-semibold text-gray-900 mb-2">
-                    Informe técnico claro
+                    Informe detallado
                 </h4>
                 <p class="text-gray-700">
                     Recibís un reporte profesional, fácil de entender y listo para usar en la decisión de compra.
