--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 Contratá la inspección, elegí día y horario y recibí tu informe técnico.
             </p>
 
-            <a class="btn-primary" href="https://nice-glacier-0614b221e.6.azurestaticapps.net/solicitud/0">Solicitar verificación</a>
+            <a class="btn-primary" href="https://automarketpro.com.ar/solicitud/0">Solicitar verificación</a>
         </div>
     </section>
 
