--- a/index.html
+++ b/index.html
@@ -174,45 +174,38 @@
 
     <!-- REPORTS -->
     <section id="reports" class="py-20">
-        <div class="max-w-6xl mx-auto px-6">
+       <div class="max-w-6xl mx-auto px-6">
 
-            <h3 class="text-3xl md:text-4xl font-bold text-gray-900 text-center mb-16">
-                Paso a paso, como funciona nuestro servicio
-            </h3>
+        <h3 class="text-3xl md:text-4xl font-bold text-gray-900 text-center mb-16">
+            Paso a paso, cómo funciona nuestro servicio
+        </h3>
 
-            <!-- ROW -->
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-12 items-center mb-20">
+        <!-- ROW 1 -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center mb-20">
+            <!-- TEXT 1 -->
+            <div>
+                <h4 class="text-xl font-bold text-gray-900 mb-3">
+                    Solicitud de verificación pre-compra
+                </h4>
+                <p class="text-gray-700 leading-relaxed">
+                    Nos pasás el enlace del auto que querés verificar y el detalle de
+                    dónde se encuentra ubicado.
+                </p>
+            </div>
 
-                <!-- TEXT 1 -->
-                <div>
-                    <h4 class="text-xl font-bold text-gray-900 mb-3">
-                        Solicitud de verificación pre-compra
-                    </h4>
-                    <p class="text-gray-700 leading-relaxed">
-                        Nos pasás el enlace del auto que querés verificar y el detalle de
-                        dónde se encuentra ubicado.
-                    </p>
-                </div>
+            <!-- IMAGE 1 -->
+            <div class="fade-in">
+                <img 
+                    src="assets/img/demo-01.png"
+                    alt="Solicitud de verificación Automarketpro"
+                    class="w-full rounded-xl"
+                />
+            </div>
 
-                <!-- IMAGE 1 -->
-                <div class="fade-in">
-                    <img 
-                        src="assets/img/demo-01.png"
-                        alt="Solicitud de verificación Automarketpro"
-                        class="w-full rounded-xl"
-                    />
-                </div>
+            </div>
 
-                <!-- TEXT 2 -->
-                <div class="fade-in">
-                    <h4 class="text-xl font-bold text-gray-900 mb-3">
-                        Pagás la inspección y agendamos
-                    </h4>
-                    <p class="text-gray-700 leading-relaxed">
-                        Una vez recibido el pago, coordinamos día y horario para realizar
-                        la inspección del vehículo en el lugar acordado.
-                    </p>
-                </div>
+            <!-- ROW 2 -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
 
                 <!-- IMAGE 2 -->
                 <div class="fade-in">
@@ -221,6 +214,17 @@
                         alt="Inspección vehicular Automarketpro"
                         class="w-full rounded-xl"
                     />
+                </div>
+                
+                <!-- TEXT 2 -->
+                <div>
+                    <h4 class="text-xl font-bold text-gray-900 mb-3">
+                        Pagás la inspección y agendamos
+                    </h4>
+                    <p class="text-gray-700 leading-relaxed">
+                        Una vez recibido el pago, coordinamos día y horario para realizar
+                        la inspección del vehículo en el lugar acordado.
+                    </p>
                 </div>
 
             </div>
