--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <!-- TEXT CENTER -->
                 <div class="text-center md:text-left fade-in">
                     <h4 class="text-2xl font-bold text-gray-900 mb-4">
-                        Informe claro y profesional
+                        Informe detallado y profesional
                     </h4>
                     <p class="text-gray-700 text-lg leading-relaxed">
                         Recibís un informe técnico detallado sobre el estado real del vehículo,
