add social footer

--- a/index.html
+++ b/index.html
@@ -303,6 +303,17 @@
                     <li><a href="#tc">Privacidad</a></li>
                 </ul>
             </div>
+            <div>
+            <h4 class="font-semibold mb-3">Seguinos en nuestras redes</h4>
+            <div class="flex space-x-4">
+                <a href="https://www.instagram.com/automarketpro.ar" target="_blank" class="text-white-700 hover:text-pink-500 transition-colors">
+                    <i class="fab fa-instagram fa-lg"></i>
+                </a>
+                <a href="https://www.facebook.com/p/Automarketpro-61569250685430/" target="_blank" class="text-white-700 hover:text-blue-600 transition-colors">
+                    <i class="fab fa-facebook fa-lg"></i>
+                </a>
+            </div>
+        </div>
         </div>
 
         <!-- TEXTO LEGAL -->
