centrado el carousel de verificados destacados

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             Verificados destacados
         </h3>
 
-        <div id="carouselVerificados"
-            class="flex overflow-x-auto gap-4 pb-4 snap-x snap-mandatory scroll-smooth hide-scrollbar">
+       <div id="carouselVerificados"
+            class="flex justify-center overflow-x-auto gap-4 pb-4 snap-x snap-mandatory scroll-smooth hide-scrollbar">
             <!-- Cards se inyectan por JS -->
         </div>
     </div>
