--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         alt="Automarketpro"
                         class="h-8 w-auto"
                     />
-                    <span class="text-2xl font-extrabold tracking-tight text-gray-900">
+                    <span class="text-2xl font-extrabold tracking-tight ">
                         Automarketpro 
                     </span>
                 </a>
@@ -76,7 +76,7 @@
 
         <!-- Menú Mobile -->
         <div id="mobile-menu" class="hidden bg-white/80 backdrop-blur-xl border-b border-white/20 shadow-md md:hidden">
-            <nav class="flex flex-col space-y-4 px-6 py-6 text-lg font-semibold text-gray-900">
+            <nav class="flex flex-col space-y-4 px-6 py-6 text-lg font-semibold ">
                 <a href="#features" class="nav-link">Nuestro servicio</a>
                 <a href="#benefits" class="nav-link">Por qué elegirnos</a>
                 <a href="#cta" class="nav-link">Contratar</a>
@@ -87,7 +87,7 @@
     <!-- HERO -->
     <section class="hero-bg parallax-bg fade-in pt-32 pb-32">
         <div class="max-w-6xl mx-auto px-6 text-center">
-            <div class="glass-card mx-auto max-w-4xl text-gray-900 shadow-lg shine-effect p-10">
+            <div class="glass-card mx-auto max-w-4xl  shadow-lg shine-effect p-10">
                 <h2 class="text-3xl md:text-5xl font-extrabold mb-4">
                     Compra seguro. <br> Compra verificado. 
                 </h2>
@@ -106,31 +106,31 @@
     <!-- FEATURES -->
     <section id="features" class="fade-in py-20">
         <div class="max-w-6xl mx-auto px-6">
-           <h3 class="text-3xl md:text-4xl font-bold text-gray-900 text-center mb-12">
+           <h3 class="text-3xl md:text-4xl font-bold  text-center mb-12">
                 ¿Qué ofrecemos?
             </h3>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="card-anim glass-card reveal p-6">
-                   <h4 class="text-2xl font-semibold text-gray-900 mb-2">
+                   <h4 class="text-2xl font-semibold  mb-2">
                         Verificación pre-compra
                     </h4>
-                    <p class="text-gray-700">
+                    <p class="">
                         Inspeccionamos el vehículo antes de que compres para detectar fallas mecánicas, estructurales y de funcionamiento.
                     </p>
                 </div>
                 <div class="card-anim glass-card reveal p-6">
-                    <h4 class="text-2xl font-semibold text-gray-900 mb-2">
+                    <h4 class="text-2xl font-semibold  mb-2">
                     Informe detallado
                 </h4>
-                <p class="text-gray-700">
+                <p class="">
                     Recibís un reporte profesional, fácil de entender y listo para usar en la decisión de compra.
                 </p>
                 </div>
                 <div class="card-anim glass-card reveal p-6">
-                    <h4 class="text-2xl font-semibold text-gray-900 mb-2">
+                    <h4 class="text-2xl font-semibold  mb-2">
                         Compra sin sorpresas
                     </h4>
-                    <p class="text-gray-700">
+                    <p class="">
                         Sabé el estado real del auto antes de pagar. Evitá problemas ocultos y gastos inesperados.
                     </p>
                 </div>
@@ -153,7 +153,7 @@
 
     <!-- STATS -->
     <section id="benefits" class="fade-in py-16">
-        <div class="max-w-6xl mx-auto px-6 text-gray-900 text-center">
+        <div class="max-w-6xl mx-auto px-6  text-center">
             <h3 class="text-3xl font-bold mb-8">¿Por qué elegir Automarketpro?</h3>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="glass-card p-6">
@@ -176,7 +176,7 @@
     <section id="reports" class="py-20">
        <div class="max-w-6xl mx-auto px-6">
 
-        <h3 class="text-3xl md:text-4xl font-bold text-gray-900 text-center mb-16">
+        <h3 class="text-3xl md:text-4xl font-bold  text-center mb-16">
             Paso a paso, cómo funciona nuestro servicio
         </h3>
 
@@ -184,10 +184,10 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center mb-20">
             <!-- TEXT 1 -->
             <div>
-                <h4 class="text-xl font-bold text-gray-900 mb-3">
+                <h4 class="text-xl font-bold  mb-3">
                     Solicitud de verificación pre-compra
                 </h4>
-                <p class="text-gray-700 leading-relaxed">
+                <p class=" leading-relaxed">
                     Nos pasás el enlace del auto que querés verificar y el detalle de
                     dónde se encuentra ubicado.
                 </p>
@@ -218,10 +218,10 @@
                 
                 <!-- TEXT 2 -->
                 <div>
-                    <h4 class="text-xl font-bold text-gray-900 mb-3">
+                    <h4 class="text-xl font-bold  mb-3">
                         Pagás la inspección y agendamos
                     </h4>
-                    <p class="text-gray-700 leading-relaxed">
+                    <p class=" leading-relaxed">
                         Una vez recibido el pago, coordinamos día y horario para realizar
                         la inspección del vehículo en el lugar acordado.
                     </p>
@@ -243,10 +243,10 @@
 
                 <!-- TEXT CENTER -->
                 <div class="text-center md:text-left fade-in">
-                    <h4 class="text-2xl font-bold text-gray-900 mb-4">
+                    <h4 class="text-2xl font-bold  mb-4">
                         Informe detallado y profesional
                     </h4>
-                    <p class="text-gray-700 text-lg leading-relaxed">
+                    <p class=" text-lg leading-relaxed">
                         Recibís un informe técnico detallado sobre el estado real del vehículo,
                         con observaciones claras para tomar una decisión segura antes de comprar.
                     </p>
@@ -269,11 +269,11 @@
     <!-- CTA -->
     <section id="cta" class="fade-in py-20 text-center">
         <div class="max-w-4xl mx-auto px-6">
-           <h3 class="text-3xl md:text-4xl font-extrabold text-gray-900 mb-4">
+           <h3 class="text-3xl md:text-4xl font-extrabold  mb-4">
                 Verificá tu próximo auto antes de comprar
             </h3>
 
-            <p class="text-lg text-gray-700 mb-6">
+            <p class="text-lg  mb-6">
                 Contratá la inspección, elegí día y horario y recibí tu informe técnico.
             </p>
 
