--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <meta property="og:type" content="website" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon.ico" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="assets/favicon.ico" />
 
     <!-- Tailwind -->
