--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.automarketpro.com.ar/" />
     
-    <title>Automarketpro - Tu próximo auto, con la tranquilidad que merecés.</title>
+    <title>Automarketpro ✔️ - Tu próximo auto, con la tranquilidad que merecés.</title>
     <!-- SEO Principal -->
     <meta name="description"
     content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
@@ -16,9 +16,8 @@
         <meta name="author" content="Automarketpro" />
         
     <!-- OpenGraph (Facebook / WhatsApp / LinkedIn) -->
-    <meta property="og:title" content="Automarketpro - Verificas fácil. Compras seguro." />
-    <meta property="og:description"
-        content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
+    <meta property="og:title" content="Automarketpro ✔️ - Verificas fácil. Compras seguro." />
+    <meta name="description" content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
     <meta property="og:image" content="assets/favicon.ico" />
     <meta property="og:url" content="https://www.automarketpro.com.ar" />
     <meta property="og:type" content="website" />
