mejoras txt footer

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-4 gap-8 text-left">
             <div>
                 <h3 class="text-2xl font-bold">Automarketpro</h3>
-                <p class="opacity-80 mt-2"> Verificación pre-compra de vehículos usados.</p>
+                <p class="opacity-80 mt-2"> Verificación pre-compra de vehículos.</p>
             </div>
             <div>
                 <h4 class="font-semibold mb-3">Menu</h4>
@@ -322,7 +322,7 @@
         <!-- TEXTO LEGAL -->
         <div id="tc" class="max-w-4xl mx-auto px-6 mt-10 text-center text-sm opacity-70 leading-relaxed">
             <p><strong>Automarketpro - Tu próximo auto, con la tranquilidad que merecés</strong></p>
-            <p class="mt-2">
+            <p class="text-xs mt-2">
                 El peritaje de vehículos es realizado por verificadores independientes y no constituye una revisión técnica
                 oficial,
                 ni está avalado por fabricantes, concesionarias u organismos estatales.
