--- a/index.html
+++ b/index.html
@@ -200,11 +200,10 @@
             <!-- TEXT 1 -->
             <div>
                 <h4 class="text-xl font-bold  mb-3">
-                    Solicitud de verificación pre-compra
+                    1. Completas el formulario de solicitud
                 </h4>
                 <p class=" leading-relaxed">
-                    Nos pasás el enlace del auto que querés verificar y el detalle de
-                    dónde se encuentra ubicado.
+                    Nos mandas los datos del auto a verificar y el lugar donde se encuentra.
                 </p>
             </div>
 
@@ -234,7 +233,7 @@
                 <!-- TEXT 2 -->
                 <div>
                     <h4 class="text-xl font-bold  mb-3">
-                        Pagás la inspección y agendamos
+                        2. Pagás la inspección y agendamos
                     </h4>
                     <p class=" leading-relaxed">
                         Una vez recibido el pago, coordinamos día y horario para realizar
@@ -259,10 +258,10 @@
                 <!-- TEXT CENTER -->
                 <div class="text-center md:text-left fade-in">
                     <h4 class="text-2xl font-bold  mb-4">
-                        Informe detallado y profesional
+                        3. Recibís un informe detallado
                     </h4>
                     <p class=" text-lg leading-relaxed">
-                        Recibís un informe técnico detallado sobre el estado real del vehículo,
+                        Reporte sobre el estado real del vehículo,
                         con observaciones claras para tomar una decisión segura antes de comprar.
                     </p>
                 </div>
