add shiny effect a card hero

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         </div>
     </header>
 
-   <section class="relative min-h-screen flex items-center hero-bg overflow-hidden py-16 md:py-24">
+    <!-- FEATURES -->
+    <section class="relative min-h-screen flex items-center hero-bg overflow-hidden py-16 md:py-24">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 w-full relative z-10"> 
-            <div class="glass-card max-w-[92%] md:max-w-2xl lg:max-w-3xl text-left shadow-2xl p-8 sm:p-10 md:p-16 rounded-[2.5rem] md:rounded-[3.5rem] backdrop-blur-md mx-auto md:mx-0 my-10">
-                
+            <div class="glass-card shine-effect max-w-[92%] md:max-w-2xl lg:max-w-3xl text-left shadow-2xl p-8 sm:p-10 md:p-16 rounded-[2.5rem] md:rounded-[3.5rem] backdrop-blur-md mx-auto md:mx-0 my-10">
                 <h2 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-black text-slate-900 leading-[1.1] mb-8 md:mb-12 tracking-tight">
                     Tu próximo auto, <br> 
                     <span class="text-blue-800 md:text-inherit">con la tranquilidad</span> <br>
@@ -105,10 +105,6 @@
                         <span class="tracking-wide">Compra seguro. Verificado.</span>
                     </div>
                 </div>
-
-                <div class="mt-8 md:mt-12 flex gap-8 opacity-60">
-                    </div>
-                
             </div>
         </div>
     </section>
