--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     
                     <div class="flex items-center gap-3 text-sm font-bold text-slate-700 bg-white/40 px-5 py-3 rounded-full border border-white/20">
                         <i class="fa-solid fa-check-double text-blue-600"></i>
-                        <span class="tracking-wide">Compra seguro. Verificado.</span>
+                        <span class="tracking-wide">Simple. Seguro. Verificado.</span>
                     </div>
                 </div>
             </div>
