mejoras SEO meta tags y logos png para icono

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         
     <!-- OpenGraph (Facebook / WhatsApp / LinkedIn) -->
     <meta property="og:title" content="Automarketpro ✔️ - Verificas fácil. Compras seguro." />
-    <meta name="description" content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
-    <meta property="og:image" content="assets/favicon.ico" />
+    <meta property="og:description" content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
+    <meta property="og:image" content="https://www.automarketpro.com.ar/assets/img/logo.png" />
     <meta property="og:url" content="https://www.automarketpro.com.ar" />
     <meta property="og:type" content="website" />
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="/assets/img/logo.png" sizes="48x48">
+    <link rel="apple-touch-icon" href="/assets/img/logo.png">
+    <link rel="shortcut icon" href="/assets/favicon.ico">
 
     <!-- Tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
