cambio img de opengraph

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- OpenGraph (Facebook / WhatsApp / LinkedIn) -->
     <meta property="og:title" content="Automarketpro ✔️ - Verificas fácil. Compras seguro." />
     <meta property="og:description" content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
-    <meta property="og:image" content="https://www.automarketpro.com.ar/assets/img/logo.png" />
+    <meta property="og:image" content="https://www.automarketpro.com.ar/assets/img/logo-full.png" />
     <meta property="og:url" content="https://www.automarketpro.com.ar" />
     <meta property="og:type" content="website" />
     
