--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <meta property="og:type" content="website" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/assets/img/logo.png" sizes="48x48">
-    <link rel="apple-touch-icon" href="/assets/img/logo.png">
-    <link rel="shortcut icon" href="/assets/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/img/logo.png" sizes="48x48">
+    <link rel="apple-touch-icon" href="assets/img/logo.png">
+    <link rel="shortcut icon" href="assets/favicon.ico">
 
     <!-- Tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
