--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:url" content="https://www.automarketpro.com.ar" />
     <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Automarketpro ✔️ - Verificas fácil. Compras seguro." />
+    <meta name="twitter:description" content="Automarketpro es la plataforma para comprar seguro tu próximo usado. Reportes premium, historial y fotos." />
+    <meta name="twitter:image" content="https://www.automarketpro.com.ar/assets/img/logo-full.png" />
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/logo.png" sizes="48x48">
