--- a/index.html
+++ b/index.html
@@ -279,7 +279,21 @@
                 </div>
 
             </div>
+        </div>
+    </section>
 
+    <!-- CTA -->
+    <section id="cta" class="fade-in py-20 text-center">
+        <div class="max-w-4xl mx-auto px-6">
+        <h3 class="text-3xl md:text-4xl font-extrabold  mb-4">
+                Verificá tu próximo auto antes de comprar
+            </h3>
+
+            <p class="text-lg  mb-6">
+                Contratá la inspección, elegí día y horario y recibí tu informe técnico.
+            </p>
+
+            <a class="btn-primary" href="https://app.automarketpro.com.ar/solicitud/0">Solicitar verificación</a>
         </div>
     </section>
 
