--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </h3>
 
        <div id="carouselVerificados"
-            class="flex justify-center overflow-x-auto gap-4 pb-4 snap-x snap-mandatory scroll-smooth hide-scrollbar">
+            class="flex overflow-x-auto snap-x snap-mandatory gap-4 pb-4 hide-scrollbar">
             <!-- Cards se inyectan por JS -->
         </div>
     </div>
