--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <meta name="twitter:image" content="https://www.automarketpro.com.ar/assets/img/logo-full.png" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/img/logo.png" sizes="48x48">
-    <link rel="apple-touch-icon" href="assets/img/logo.png">
-    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/png" href="https://www.automarketpro.com.ar/assets/img/logo.png" sizes="48x48">
+    <link rel="apple-touch-icon" href="https://www.automarketpro.com.ar/assets/img/logo.png">
+    <link rel="shortcut icon" href="https://www.automarketpro.com.ar/assets/img/logo.png" type="image/png">
 
     <!-- Tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
