--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
         </div>
     </section>
 
+    <div class="contenedor-reels-grid">
+        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DTgem4vDx9W/" data-instgrm-version="14">
+            <a href="https://www.instagram.com/reel/DTgem4vDx9W/"></a>
+        </blockquote>
+
+        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DSI_0qdj3RD/" data-instgrm-version="14">
+            <a href="https://www.instagram.com/reel/DSI_0qdj3RD/"></a>
+        </blockquote>
+
+        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DRxwrnmD1Fv/" data-instgrm-version="14">
+            <a href="https://www.instagram.com/reel/DRxwrnmD1Fv/"></a>
+        </blockquote>
+    </div>
+
+    <script async src="https://www.instagram.com/embed.js"></script>
+
     <!-- FEATURES -->
     <section id="features" class="fade-in py-20 bg-primary">
         <div class="max-w-6xl mx-auto px-6">
