add new slogan cta

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     <section id="cta" class="fade-in py-20 text-center">
         <div class="max-w-4xl mx-auto px-6">
         <h3 class="text-3xl md:text-4xl font-extrabold  mb-4">
-                Verificá tu próximo auto antes de comprar
+                Cada auto tiene su historia. <br> Conocela antes de comprar.
             </h3>
 
             <p class="text-lg  mb-6">
