--- a/index.html
+++ b/index.html
@@ -277,23 +277,35 @@
         </div>
     </div>
 
-    <!-- STATS -->
     <section id="benefits" class="fade-in py-16 bg-primary">
-        <div class="max-w-6xl mx-auto px-6  text-center">
-            <h3 class="text-3xl font-bold mb-8">¿Por qué elegir Automarketpro?</h3>
+        <div class="max-w-6xl mx-auto px-6 text-center">
+            <h3 class="text-3xl font-bold mb-12">¿Por qué elegir Automarketpro?</h3>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                
                 <div class="glass-card p-6">
-                    <div class="stat-number counter" data-target="800">0</div>
-                    <div class="opacity-80 mt-2">Inspecciones realizadas</div>
+                    <i class="fas fa-car mb-4 text-3xl opacity-60"></i>
+                    <div class="text-4xl font-bold">
+                        <span>+</span><span class="counter" data-target="748">0</span>
+                    </div>
+                    <div class="opacity-80 mt-2 font-medium">Vehículos verificados</div>
                 </div>
+
                 <div class="glass-card p-6">
-                    <div class="stat-number counter" data-target="150">0</div>
-                    <div class="opacity-80 mt-2">Compradores asesorados</div>
+                    <i class="fas fa-clipboard-list mb-4 text-3xl opacity-60"></i>
+                    <div class="text-4xl font-bold">
+                        <span>+</span><span class="counter" data-target="150">0</span>
+                    </div>
+                    <div class="opacity-80 mt-2 font-medium">Puntos de control por informe</div>
                 </div>
+
                 <div class="glass-card p-6">
-                    <div class="stat-number counter" data-target="370">0</div>
-                    <div class="opacity-80 mt-2">Informes técnicos entregados</div>
+                    <i class="fas fa-gauge-high mb-4 text-3xl opacity-60"></i>
+                    <div class="text-4xl font-bold">
+                        <span class="counter" data-target="22">0</span><span>%</span>
+                    </div>
+                    <div class="opacity-80 mt-2 font-medium">Fraude de kilometraje detectado</div>
                 </div>
+
             </div>
         </div>
     </section>
