add mas button ocultos href hacia el form de solicitud

--- a/index.html
+++ b/index.html
@@ -106,10 +106,12 @@
                         Solicitar verificación
                     </a>
                     
-                    <div class="flex items-center gap-3 text-sm font-bold text-slate-700 bg-white/40 px-5 py-3 rounded-full border border-white/20">
-                        <i class="fa-solid fa-check-double text-blue-600"></i>
-                        <span class="tracking-wide">Simple. Seguro. Verificado.</span>
-                    </div>
+                    <a href="https://app.automarketpro.com.ar/solicitud/0" style="text-decoration: none; color: inherit; display: block;">
+                        <div class="flex items-center gap-3 text-sm font-bold text-slate-700 bg-white/40 px-5 py-3 rounded-full border border-white/20">
+                            <i class="fa-solid fa-check-double text-blue-600"></i>
+                            <span class="tracking-wide">Simple. Seguro. Verificado.</span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -155,30 +157,32 @@
                 </div>
             </div>
 
-            <div id="inspeccion-detalle" class="pt-10 border-t border-white/10">
-                <h3 class="text-3xl md:text-4xl font-bold text-center mb-4">
-                    Servicio de Inspección Pre Compra
-                </h3>
+            <a href="https://app.automarketpro.com.ar/solicitud/0" style="text-decoration: none; color: inherit; display: block;">
+                <div id="inspeccion-detalle" class="pt-10 border-t border-white/10">
+                    <h3 class="text-3xl md:text-4xl font-bold text-center mb-4">
+                        Servicio de Inspección Pre Compra
+                    </h3>
 
-                <div class="flex justify-center mb-16">
-                    <div class="relative group">
-                        <div class="absolute -inset-1 bg-gradient-to-r from-blue-600 to-cyan-400 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
-                        <div class="relative px-8 py-6 bg-secondary rounded-xl border border-blue-500/30 text-center shadow-2xl">
-                            <span class="absolute -top-3 left-1/2 -translate-x-1/2 bg-blue-600 text-white text-xs font-bold px-3 py-1 rounded-full uppercase tracking-widest shadow-lg">
-                                Tarifa Promocional
-                            </span>
-                            <p class="text-gray-400 text-sm uppercase tracking-widest mb-1">Servicio de Inspección</p>
-                            <div class="flex items-center justify-center gap-3">
-                                <span class="text-4xl md:text-5xl font-extrabold text-white">
-                                    $99.000
+                    <div class="flex justify-center mb-16">
+                        <div class="relative group">
+                            <div class="absolute -inset-1 bg-gradient-to-r from-blue-600 to-cyan-400 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
+                            <div class="relative px-8 py-6 bg-secondary rounded-xl border border-blue-500/30 text-center shadow-2xl">
+                                <span class="absolute -top-3 left-1/2 -translate-x-1/2 bg-blue-600 text-white text-xs font-bold px-3 py-1 rounded-full uppercase tracking-widest shadow-lg">
+                                    Tarifa Promocional
                                 </span>
+                                <p class="text-gray-400 text-sm uppercase tracking-widest mb-1">Servicio de Inspección</p>
+                                <div class="flex items-center justify-center gap-3">
+                                    <span class="text-4xl md:text-5xl font-extrabold text-white">
+                                        $99.000
+                                    </span>
+                                </div>
+                                <p class="text-blue-400 text-sm mt-2 font-medium">
+                                    <i class="fas fa-check-circle mr-1"></i> Precio final con informe incluido
+                                </p>
                             </div>
-                            <p class="text-blue-400 text-sm mt-2 font-medium">
-                                <i class="fas fa-check-circle mr-1"></i> Precio final con informe incluido
-                            </p>
                         </div>
                     </div>
-                </div>
+                </a>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     
