--- a/index.html
+++ b/index.html
@@ -259,10 +259,6 @@
         <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DSI_0qdj3RD/" data-instgrm-version="14">
             <a href="https://www.instagram.com/reel/DSI_0qdj3RD/"></a>
         </blockquote>
-
-        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DRxwrnmD1Fv/" data-instgrm-version="14">
-            <a href="https://www.instagram.com/reel/DRxwrnmD1Fv/"></a>
-        </blockquote>
     </div>
 
     <script async src="https://www.instagram.com/embed.js"></script>
@@ -297,7 +293,7 @@
                 <div class="glass-card p-6">
                     <i class="fas fa-clipboard-list mb-4 text-3xl opacity-60"></i>
                     <div class="text-4xl font-bold">
-                        <span>+</span><span class="counter" data-target="120">0</span>
+                        <span class="counter" data-target="120">0</span>
                     </div>
                     <div class="opacity-80 mt-2 font-medium">Puntos de control por informe</div>
                 </div>
