resumo texto de cards

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                 <div class="card-anim glass-card reveal p-6">
                     <h4 class="text-2xl font-semibold mb-3 flex items-center gap-3">
                         <i class="fas fa-magnifying-glass text-blue-500"></i>
-                        Verificación pre compra
+                        Completo
                     </h4>
-                    <p class="">
-                        Revisamos todos los puntos del auto, motor, carrocería y electrónica. Detectamos fallas y problemas ocultos para que sepas exactamente qué estás comprando.
+                    <p>
+                        Revisamos todos los puntos del auto, motor, carrocería y electrónica.
                     </p>
                 </div>
 
@@ -141,8 +141,8 @@
                         <i class="fas fa-shield text-blue-500"></i>
                         Seguro
                     </h4>
-                    <p class="">
-                        Podemos acompañarte a ver el vehículo o ir nosotros solos y enviarte el informe completo. Vos elegís la modalidad que prefieras.
+                    <p>
+                        Informe remoto o acompañamiento en persona. Vos elegis. 
                     </p>
                 </div>
 
@@ -151,8 +151,8 @@
                         <i class="fas fa-bolt text-blue-500"></i>
                         Rápido
                     </h4>
-                    <p class="">
-                        Tu tiempo vale. Generalmente tenemos turnos para el mismo día, pero te recomendamos reservar con tiempo para asegurar tu lugar.
+                    <p>
+                        Turnos rápidos y con reserva anticipada.
                     </p>
                 </div>
             </div>
@@ -184,65 +184,45 @@
                     </div>
                 </a>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    
-                    <div class="card-anim glass-card reveal p-6">
-                        <h4 class="text-2xl font-semibold mb-3 flex items-center gap-3">
-                            <i class="fas fa-video text-blue-500"></i>
-                            Estado Visual y Real
-                        </h4>
-                        <p class="text-gray-300">
-                            Incluye un <strong>video detallado</strong> del estado general y la <strong>verificación de kilometraje real</strong> para garantizar la transparencia de la unidad.
-                        </p>
-                    </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
 
                     <div class="card-anim glass-card reveal p-6">
-                        <h4 class="text-2xl font-semibold mb-3 flex items-center gap-3">
+                        <h4 class="text-xl font-semibold mb-3 flex items-center gap-3">
                             <i class="fas fa-microchip text-blue-500"></i>
                             Escaneo Completo
                         </h4>
-                        <p class="text-gray-300">
-                            Realizamos un escaneo electrónico total detectando fallas ocultas, testigos encendidos y analizando el historial profundo del vehículo.
+                        <p class="text-gray-300 text-sm">
+                            Realizamos un escaneo electrónico detectando fallas ocultas y analizando el historial profundo del vehículo.
                         </p>
                     </div>
 
                     <div class="card-anim glass-card reveal p-6 text-blue-100">
-                        <h4 class="text-2xl font-semibold mb-3 flex items-center gap-3 text-white">
+                        <h4 class="text-xl font-semibold mb-3 flex items-center gap-3 text-white">
                             <i class="fas fa-car-side text-blue-500"></i>
-                            Revisión estructural
+                            Revisión mecánica y estructural
                         </h4>
-                        <p class="text-gray-300">
-                            Inspección técnica de la integridad del <strong>chasis y carrocería</strong>, evaluando la vida útil de los elementos estructurales.
-                        </p>
-                    </div>
-
-                    <div class="card-anim glass-card reveal p-6 text-blue-100">
-                        <h4 class="text-2xl font-semibold mb-3 flex items-center gap-3 text-white">
-                            <i class="fas fa-tools text-blue-500"></i>
-                            Revisión Mecánica
-                        </h4>
-                        <p class="text-gray-300">
-                            Control exhaustivo del motor, búsqueda de <strong>pérdidas o fugas</strong> de fluidos y diagnóstico del estado mecánico actual.
+                        <p class="text-gray-300 text-sm">
+                            Inspección técnica del motor, fugas e integridad del <strong>chasis y carrocería</strong>.
                         </p>
                     </div>
 
                     <div class="card-anim glass-card reveal p-6">
-                        <h4 class="text-2xl font-semibold mb-3 flex items-center gap-3">
+                        <h4 class="text-xl font-semibold mb-3 flex items-center gap-3">
                             <i class="fas fa-exclamation-triangle text-blue-500"></i>
                             Alertas Tempranas
                         </h4>
-                        <p class="text-gray-300">
-                            Te informamos sobre posibles reparaciones próximas o cambios de piezas necesarios para que no tengas sorpresas post-compra.
+                        <p class="text-gray-300 text-sm">
+                            Te informamos sobre posibles reparaciones próximas o cambios de piezas necesarios.
                         </p>
                     </div>
 
                     <div class="card-anim glass-card reveal p-6">
-                        <h4 class="text-2xl font-semibold mb-3 flex items-center gap-3 text-white">
+                        <h4 class="text-xl font-semibold mb-3 flex items-center gap-3 text-white">
                             <i class="fas fa-file-invoice text-blue-500"></i>
                             Informe Legal
                         </h4>
-                        <p class="text-gray-300">
-                            Entrega de un <strong>informe legal completo</strong> detallando la situación de multas y patentes para una transferencia segura.
+                        <p class="text-gray-300 text-sm">
+                            Detallamos la situación de multas y patentes para una transferencia segura.
                         </p>
                     </div>
 
