--- a/index.html
+++ b/index.html
@@ -232,13 +232,16 @@
     </section>
 
     <div class="contenedor-reels-grid">
-        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DTgem4vDx9W/" data-instgrm-version="14">
-            <a href="https://www.instagram.com/reel/DTgem4vDx9W/"></a>
-        </blockquote>
-
-        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DSI_0qdj3RD/" data-instgrm-version="14">
-            <a href="https://www.instagram.com/reel/DSI_0qdj3RD/"></a>
-        </blockquote>
+        <div class="reel-wrapper">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DTgem4vDx9W/" data-instgrm-version="14">
+                <a href="https://www.instagram.com/reel/DTgem4vDx9W/"></a>
+            </blockquote>
+        </div>
+        <div class="reel-wrapper">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DSI_0qdj3RD/" data-instgrm-version="14">
+                <a href="https://www.instagram.com/reel/DSI_0qdj3RD/"></a>
+            </blockquote>
+        </div>
     </div>
 
     <script async src="https://www.instagram.com/embed.js"></script>
