--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-24">
                 <div class="card-anim glass-card reveal p-6">
                     <h4 class="text-2xl font-semibold mb-3 flex items-center gap-3">
-                        <i class="fas fa-magnifying-glass text-blue-500"></i>
-                        Completo
+                        <i class="fas fa-calendar-check text-blue-500"></i>
+                        Simple
                     </h4>
                     <p>
-                        Revisamos todos los puntos del auto, motor, carrocería y electrónica.
+                        Completás la solicitud online en 1 minuto.
                     </p>
                 </div>
 
@@ -142,7 +142,7 @@
                         Seguro
                     </h4>
                     <p>
-                        Informe remoto o acompañamiento en persona. Vos elegis. 
+                        Pagás de forma segura y reservás automáticamente.
                     </p>
                 </div>
 
@@ -152,7 +152,7 @@
                         Rápido
                     </h4>
                     <p>
-                        Turnos rápidos y con reserva anticipada.
+                        Informe completo en 24hs.
                     </p>
                 </div>
             </div>
@@ -198,7 +198,7 @@
 
                     <div class="card-anim glass-card reveal p-6 text-blue-100">
                         <h4 class="text-xl font-semibold mb-3 flex items-center gap-3 text-white">
-                            <i class="fas fa-car-side text-blue-500"></i>
+                            <i class="fas fa-magnifying-glass text-blue-500"></i>
                             Revisión mecánica y estructural
                         </h4>
                         <p class="text-gray-300 text-sm">
